--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "hexo-site",
   "version": "0.0.0",
-  "private": true,
+  "scripts": {
+    "start": "rimraf public/ && hexo s g",
+    "new": "hexo new",
+    "build": "rimraf public/ && hexo g",
+    "clean": "rimraf public/ db.json debug.log"
+  },
   "hexo": {
     "version": "3.5.0"
   },
@@ -15,5 +20,8 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-server": "^0.2.0"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.2"
   }
 }
