--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
-  "private": true,
+  "name": "blog",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "hexo s",
+    "new":"hexo new",
+    "build": "hexo clean && hexo g",
+    "clean": "hexo clean"
+  },
   "hexo": {
     "version": "3.5.0"
   },
