--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -117,7 +117,7 @@ menu:
   archives: /archives/ || archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
-  # commonweal: /404/ || heartbeat
+  commonweal: 404.html
 
 # Enable/Disable menu icons / item badges.
 menu_settings:
