加入github标志；开启自动自动摘要并显示全文阅读按钮

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "hexo s",
     "new": "hexo new",
     "build": "hexo clean && hexo g",
-    "clean": "hexo clean"
+    "clean": "hexo clean",
+    "dev": "hexo s --debug"
   },
   "hexo": {
     "version": "3.5.0"
