--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,7 @@ live2d:
     width: 100
     # height: 300
   mobile:
-    show: true
-    scale: 0.1
+    show: false
 
 # set theme config
 theme_config:
