把未完成的文章移入草稿；移除自动摘要配置；调整hexo服务器的命令运行模式为显示草稿和正常两种

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "blog",
   "version": "1.0.0",
   "scripts": {
-    "start": "hexo s",
+    "start": "hexo s --draft",
+    "server": "hexo s",
     "new": "hexo new",
     "build": "hexo clean && hexo g",
     "clean": "hexo clean",
