调整字体大小为18

--- a/_config.yml
+++ b/_config.yml
@@ -111,3 +111,8 @@ theme_config:
   social:
     GitHub: https://github.com/InitNext || github
     E-Mail: mailto:3137650480@qq.com || envelope
+
+  font:
+    enable: true
+    global:
+      size: 18
