--- a/_config.yml
+++ b/_config.yml
@@ -119,3 +119,7 @@ theme_config:
 
   math:
     enable: true
+    engine: mathjax
+    mathjax:
+      cdn: //cdn.jsdelivr.net/npm/mathjax@2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+
