--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 每天一点
-subtitle: 做一个混吃等死的程序猿
-description: 持之以恒 切忌浮躁
-author: 月下休憩
+title: 知行合一
+subtitle: 对技术的热情让我永不停歇
+#description: 持之以恒 切忌浮躁
+author: 陈随想
 language: zh-CN
 timezone: Asia/Shanghai
 
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://blog.yilinfeng.top
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title.html
 permalink_defaults:
 
 # Directory
@@ -79,27 +79,17 @@ theme: next
 deploy:
   type:
 
-# 看板娘
-# github https://github.com/EYHN/hexo-helper-live2d/blob/master/README.zh-CN.md
-live2d:
-  enable: true
-  # jsdeliver CDN
-  scriptFrom: jsdelivr
-  model:
-    use: https://cdn.jsdelivr.net/npm/live2d-widget-model-koharu@1.0.5/assets/koharu.model.json
-  display:
-    position: left
-    width: 100
-    # height: 300
-  mobile:
-    show: false
-
-# set theme config
+# next主题设置
 theme_config:
   # 主题
-  scheme: Mist
+  scheme: Gemini
+
   # 头像
-  avatar: /images/avatar.png
+  avatar:
+    url: /images/avatar.png
+    rounded: true
+    rotated: true
+
   # 菜单
   menu:
     home: / || home
@@ -107,20 +97,91 @@ theme_config:
     categories: /categories/ || th
     archives: /archives/ || archive
     commonweal: /404.html || heartbeat
+
   # github fork me 标志
   github_banner: https://github.com/InitNext || Follow me on GitHub
   social:
     GitHub: https://github.com/InitNext || github
     E-Mail: mailto:3137650480@qq.com || envelope
 
+  # 侧边栏位置
+  sidebar:
+    position: left
+
+  # 代码高亮主题
+  highlight_theme: night
+
+  footer:
+    # 建站时间
+    since: 2018
+
+  # Gitalk评论
+  gitalk:
+    enable: true
+    github_id: InitNext
+    repo: InitNext.github.io
+    client_id: 37644037ac52d12cdd8a
+    client_secret: 09993925bc5a09337e2d13cc1225761ca099d39b
+    admin_user: InitNext
+    distraction_free_mode: true
+
+  # 谷歌分析
+  google_analytics:
+    tracking_id: UA-135887327-1
+    localhost_ignored: true
+
+  # 内容分享
+  needmoreshare2:
+    enable: true
+    postbottom:
+      enable: true
+
+  # 搜索
+  local_search:
+    enable: true
+    trigger: auto
+    top_n_per_article: 1
+    unescape: false
+
+  # 谷歌站点管理工具
+  google_site_verification: cCGIgodGvlMoVATcXs4p7kl8BVhmqW8u1kcPBZfD2qw
+
+  # 站点地图
+  sitemap:
+    path: sitemap.xml
+
+  # 百度站点地图
+  baidusitemap:
+    path: baidusitemap.xml
+
+  # 字体
   font:
     enable: true
     global:
       size: 16
 
+  # 数学公式
   math:
     enable: true
     engine: mathjax
     mathjax:
       cdn: //cdn.jsdelivr.net/npm/mathjax@2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
+  # 搜索引擎优化
+  seo: true
+  baidu_push: true
+
+  # 文章阅读数
+  leancloud_visitors:
+    enable: true
+    app_id: EVuNVQdwjVVETLVOGGdClySN-gzGzoHsz
+    app_key: UBIufuTIEV1gHcdJIx6IOmyN
+    security: false
+    betterPerformance: true
+
+# 阅读时间
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
