--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ theme_config:
     repo: InitNext.github.io
     client_id: 37644037ac52d12cdd8a
     client_secret: 09993925bc5a09337e2d13cc1225761ca099d39b
-    admin_user: 3137650480@qq.com
+    admin_user: InitNext
     distraction_free_mode: true # Facebook-like distraction free mode
     # Gitalk's display language depends on user's browser or system environment
     # If you want everyone visiting your site to see a uniform language, you can set a force language value
