--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-leancloud-counter-security": "^1.4.0",
+    "hexo-related-popular-posts": "^3.0.3",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-symbols-count-time": "^0.4.4"
   }
 }
