--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ branches:
 
 before_install:
   - mv ./source/css/custom.styl ./themes/next/source/css/_custom/
+  - ls -l ./themes/next/source/css/_custom/
+  - cat ./themes/next/source/css/_custom/custom.styl
 
 install:
   - npm install
