--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.yilinfeng.top
+url: https://blog.yilinfeng.top
 root: /
 permalink: :title.html
 permalink_defaults:
