--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blog.yilinfeng.top
 root: /
-permalink: :title.html
+permalink: posts/:abbrlink.html
 permalink_defaults:
 
 # Directory
@@ -224,3 +224,8 @@ neat_js:
   compress:
   exclude:
     - '*.min.js'
+
+# 短链接
+abbrlink:
+  alg: crc32  #support crc16(default) and crc32
+  rep: hex    #support dec(default) and hex
