--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "hexo": "^3.8.0",
+    "hexo-abbrlink": "^2.0.5",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
