修改网站信息：作者、描述、子标题

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: 知行合一
-subtitle: 对技术的热情让我永不停歇
-#description: 持之以恒 切忌浮躁
-author: 陈随想
+subtitle: 唯一的出路就是穿过苦难
+description: 高温高压
+author: 行者1995
 language: zh-CN
 timezone: Asia/Shanghai
 
