--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: 知行合一
 subtitle: 唯一的出路就是穿过苦难
-description: 高温高压
-author: 行者1995
+description: 只争朝夕
+author: 陈淦斌
 language: zh-CN
 timezone: Asia/Shanghai
 
@@ -106,9 +106,9 @@ theme_config:
     commonweal: /404.html || heartbeat
 
   # github fork me 标志
-  github_banner: https://github.com/InitNext || Follow me on GitHub
+  github_banner: https://github.com/ChenGanBin || Follow me on GitHub
   social:
-    GitHub: https://github.com/InitNext || github
+    GitHub: https://github.com/ChenGanBin || github
     E-Mail: mailto:3137650480@qq.com || envelope
 
   # 侧边栏位置
@@ -125,11 +125,11 @@ theme_config:
   # Gitalk评论
   gitalk:
     enable: true
-    github_id: InitNext
-    repo: InitNext.github.io
+    github_id: ChenGanBin
+    repo: ChenGanBin.github.io
     client_id: 37644037ac52d12cdd8a
     client_secret: 09993925bc5a09337e2d13cc1225761ca099d39b
-    admin_user: InitNext
+    admin_user: ChenGanBin
     distraction_free_mode: true
 
   # 谷歌分析
