--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
     - hexo
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_2c430460807a_key -iv $encrypted_2c430460807a_iv -in ./doc/secrets.tar.enc -out secrets.tar -d
+  - openssl aes-256-cbc -K $encrypted_2c430460807a_key -iv $encrypted_2c430460807a_iv -in secrets.tar.enc -out secrets.tar -d
   - tar xvf secrets.tar
   - mv id_rsa ssh_know_hosts ~/.ssh/
   - mv ./source/css/custom.styl ./themes/next/source/css/_custom/
