--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 知行合一
-subtitle: 唯一的出路就是穿过苦难
-description: 只争朝夕
-author: 陈淦斌
+title: 知行
+#subtitle: 唯一的出路就是穿过苦难
+description: 韭零后一枚，技术菜鸟，喜欢做白日梦，热爱修仙，任职于一小公司里撸代码。
+author: 知行
 language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.yilinfeng.top
+url: https://www.zhixing.icu
 root: /
 permalink: posts/:abbrlink.html
 permalink_defaults:
@@ -106,9 +106,9 @@ theme_config:
     commonweal: /404.html || heartbeat
 
   # github fork me 标志
-  github_banner: https://github.com/ChenGanBin || Follow me on GitHub
+  github_banner: https://github.com/izhixing || Follow me on GitHub
   social:
-    GitHub: https://github.com/ChenGanBin || github
+    GitHub: https://github.com/izhixing || github
     E-Mail: mailto:3137650480@qq.com || envelope
 
   # 侧边栏位置
@@ -125,8 +125,8 @@ theme_config:
   # Gitalk评论
   gitalk:
     enable: true
-    github_id: ChenGanBin
-    repo: ChenGanBin.github.io
+    github_id: izhixing
+    repo: izhixing.github.io
     client_id: 37644037ac52d12cdd8a
     client_secret: 09993925bc5a09337e2d13cc1225761ca099d39b
     admin_user: ChenGanBin
