--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,21 @@
 
 # Site
 title: 知行
-#subtitle: 唯一的出路就是穿过苦难
+subtitle: ''
 description: 韭零后一枚，技术菜鸟，喜欢做白日梦，热爱修仙，任职于一小公司里撸代码。
+keywords:
 author: 知行
 language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.zhixing.icu
-root: /
+## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+url: https://blog.izhixing.icu
 permalink: posts/:abbrlink.html
 permalink_defaults:
+pretty_urls:
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -31,7 +34,10 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -41,7 +47,14 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: ''
+  wrap: true
+  hljs: false
+prismjs:
+  enable: false
+  preprocess: true
+  line_number: true
+  tab_replace: ''
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -57,17 +70,29 @@ default_category: uncategorized
 category_map:
 tag_map:
 
+# Metadata elements
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+meta_generator: true
+
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
+## updated_option supports 'mtime', 'date', 'empty'
+updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+# Include / Exclude file(s)
+## include:/exclude: options only apply to the 'source/' folder
+include:
+exclude:
+ignore:
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
@@ -75,157 +100,6 @@ pagination_dir: page
 theme: next
 
 # Deployment
-## Docs: https://hexo.io/docs/deployment.html
+## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type:
-
-# next主题设置
-theme_config:
-  # 主题
-  scheme: Gemini
-
-  # 头像
-  avatar:
-    url: http://ww1.sinaimg.cn/large/e6dffef4gy1g13vyu6hakj2139139qmq.jpg
-    rounded: true
-    rotated: true
-
-  # 网站图标
-  favicon:
-    small: /images/favicon-16x16.png
-    medium: /images/favicon-32x32.png
-    apple_touch_icon: /images/apple-touch-icon.png
-    safari_pinned_tab: /images/safari-pinned-tab.svg
-
-  # 菜单
-  menu:
-    home: / || home
-    tags: /tags/ || tags
-    categories: /categories/ || th
-    archives: /archives/ || archive
-    commonweal: /404.html || heartbeat
-
-  # github fork me 标志
-  github_banner: https://github.com/izhixing || Follow me on GitHub
-  social:
-    GitHub: https://github.com/izhixing || github
-    E-Mail: mailto:3137650480@qq.com || envelope
-
-  # 侧边栏位置
-  sidebar:
-    position: left
-
-  # 代码高亮主题
-  highlight_theme: night
-
-  footer:
-    # 建站时间
-    since: 2018
-
-  # Gitalk评论
-  gitalk:
-    enable: true
-    github_id: izhixing
-    repo: izhixing.github.io
-    client_id: 37644037ac52d12cdd8a
-    client_secret: 09993925bc5a09337e2d13cc1225761ca099d39b
-    admin_user: ChenGanBin
-    distraction_free_mode: true
-
-  # 谷歌分析
-  google_analytics:
-    tracking_id: UA-135887327-1
-    localhost_ignored: true
-
-  # 内容分享
-  needmoreshare2:
-    enable: true
-    postbottom:
-      enable: true
-
-  # 搜索
-  local_search:
-    enable: true
-    trigger: auto
-    top_n_per_article: 1
-    unescape: false
-
-  # 谷歌站点管理工具
-  google_site_verification: cCGIgodGvlMoVATcXs4p7kl8BVhmqW8u1kcPBZfD2qw
-
-  # 字体
-  font:
-    enable: true
-    global:
-      size: 16
-
-  # 数学公式
-  math:
-    enable: true
-    engine: mathjax
-    mathjax:
-      cdn: //cdn.jsdelivr.net/npm/mathjax@2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
-
-  # 搜索引擎优化
-  seo: true
-  baidu_push: true
-
-  # 文章阅读数
-  leancloud_visitors:
-    enable: true
-    app_id: EVuNVQdwjVVETLVOGGdClySN-gzGzoHsz
-    app_key: UBIufuTIEV1gHcdJIx6IOmyN
-    security: false
-    betterPerformance: true
-
-  # cdn加速
-  vendors:
-    jquery: //cdn.jsdelivr.net/npm/jquery@2/dist/jquery.min.js
-    velocity: //cdn.jsdelivr.net/npm/velocity-animate@1/velocity.min.js
-    velocity_ui: //cdn.jsdelivr.net/npm/velocity-animate@1/velocity.ui.min.js
-    fontawesome: //cdn.jsdelivr.net/npm/font-awesome@4/css/font-awesome.min.css
-    needmoreshare2_js: //cdn.jsdelivr.net/gh/theme-next/theme-next-needmoreshare2@1/needsharebutton.min.js
-    needmoreshare2_css: //cdn.jsdelivr.net/gh/theme-next/theme-next-needmoreshare2@1/needsharebutton.min.css
-
-# 站点地图
-sitemap:
-  path: sitemap.xml
-
-# 百度站点地图
-baidusitemap:
-  path: baidusitemap.xml
-
-# 阅读时间
-symbols_count_time:
-  symbols: true
-  time: true
-  total_symbols: true
-  total_time: true
-
-# 代码压缩 启用neat
-neat_enable: true
-
-# 对html优化
-neat_html:
-  enable: true
-  exclude:
-
-# 对css优化
-neat_css:
-  enable: true
-  exclude:
-    - '*.min.css'
-
-# 对js优化
-neat_js:
-  enable: true
-  mangle: true
-  output:
-  compress:
-  exclude:
-    - '*.min.js'
-
-# 短链接
-abbrlink:
-  alg: crc32  #support crc16(default) and crc32
-  rep: hex    #support dec(default) and hex
+  type: ''
