--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "hexo s --draft",
-    "server": "hexo s",
+    "build": "hexo generate",
     "clean": "hexo clean",
-    "cli": "hexo",
-    "draft": "hexo new draft"
+    "deploy": "hexo deploy",
+    "server": "hexo server"
   },
   "hexo": {
-    "version": "3.8.0"
+    "version": "5.4.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
-    "hexo-abbrlink": "^2.0.5",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-baidu-sitemap": "^0.1.6",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index-pin-top": "^0.2.2",
-    "hexo-generator-searchdb": "^1.0.8",
-    "hexo-generator-sitemap": "^1.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-html-truncate": "^1.0.0",
-    "hexo-neat": "^1.0.4",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-kramed": "^0.1.4",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
-    "hexo-symbols-count-time": "^0.4.4"
+    "hexo": "^5.0.0",
+    "hexo-abbrlink": "^2.2.1",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-searchdb": "^1.3.3",
+    "hexo-generator-sitemap": "^2.1.0",
+    "hexo-generator-tag": "^1.0.0",
+    "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-server": "^2.0.0",
+    "hexo-theme-next": "^8.2.2"
   }
 }
